--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+     <h1>I am sobir</h1>
+     <h1>i am 20 years old</h1>
 </body>
 </html>
