--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
      <h1>I am sobir</h1>
      <h1>i am 20 years old</h1>
+
+     <h1>I am Rahmatjon</h1>
+     <h1>I am 23 yearas old</h1>
 </body>
 </html>
